fix(car-advice): fix spacing of insurance results and add inline car info

--- a/src/app/components/knx-car-info-message/car-info.component.scss
+++ b/src/app/components/knx-car-info-message/car-info.component.scss
@@ -1,3 +1,7 @@
+.knx-car-info-message .row {
+  margin-bottom: 10px;
+}
+
 .knx-car-info__message {
   margin-bottom: 15px;
   height: 130px;
