--- a/src/styles/overrides.scss
+++ b/src/styles/overrides.scss
@@ -35,8 +35,8 @@
   line-height: 1.4em;
 }
 
-.knx-info__icon {
-  font-size: $font-size-base + 3;
+.knx-message.knx-message--hint {
+  margin-bottom: 15px;
 }
 
 @media (max-width: 768px) {
